--- a/TestingWorkshop/TestingWorkshop/TestingWorkshop.csproj
+++ b/TestingWorkshop/TestingWorkshop/TestingWorkshop.csproj
@@ -47,11 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Hour24Model.cs" />
+    <Compile Include="Models\TimeNoModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HourProcessor.cs" />
+    <Compile Include="Services\IHoursProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
