--- a/TestingWorkshop/TestingWorkshop/TestingWorkshop.csproj
+++ b/TestingWorkshop/TestingWorkshop/TestingWorkshop.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Models\Hour24Model.cs" />
     <Compile Include="Models\TimeNoModel.cs" />
     <Compile Include="Program.cs" />
@@ -60,6 +61,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
