--- a/TestingWorkshop/xTestingWorkshopTests/xTestingWorkshopTests.csproj
+++ b/TestingWorkshop/xTestingWorkshopTests/xTestingWorkshopTests.csproj
@@ -82,10 +82,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Comparer\TimeNoModelComparer.cs" />
     <Compile Include="ExplorationTests.cs" />
-    <Compile Include="Models\Hour24ModelTests.cs" />
-    <Compile Include="Models\TimeNoModelTests.cs" />
+    <Compile Include="Extensions\TimeNoModelExtensionsTests.cs" />
+    <Compile Include="Extensions\Hour24ModelExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
