--- a/TestingWorkshop/xTestingWorkshopTests/xTestingWorkshopTests.csproj
+++ b/TestingWorkshop/xTestingWorkshopTests/xTestingWorkshopTests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Extensions\TimeNoModelExtensionsTests.cs" />
     <Compile Include="Extensions\Hour24ModelExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoDigitsNumberGeneratorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
