--- a/TestingWorkshop/TestingWorkshop/TestingWorkshop.csproj
+++ b/TestingWorkshop/TestingWorkshop/TestingWorkshop.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Models\TimeNoModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HourGenerator.cs" />
     <Compile Include="Services\HourProcessor.cs" />
+    <Compile Include="Services\IHourGenerator.cs" />
     <Compile Include="Services\IHoursProcessor.cs" />
     <Compile Include="Services\IUniqueNumberGenerator.cs" />
     <Compile Include="Services\TwoDigitsUniqueNumberGenerator.cs" />
